# UEL-Computacao-Grafica

./: rgb-to-cmyk.py
OpenGL/: CMakeLists.txt  main.cpp
OpenGL_Transformadas/: CMakeLists.txt  constants.h  figures.cpp  figures.h  keyboard_mouse_handler.cpp  keyboard_mouse_handler.h  main.cpp  menus.cpp  menus.h
OpenGL_key_mouse_events/: CMakeLists.txt  figures.cpp  figures.h  keyboard_mouse_handler.cpp  main.cpp  menus.cpp
T4E1/: CMakeLists.txt  camera.cpp  camera.h  keyboard_mouse_handler.cpp  keyboard_mouse_handler.h  main.cpp
T4E2/: CMakeLists.txt  camera.cpp  camera.h  earth_moon.cpp  earth_moon.h  main.cpp
T4E3/: CMakeLists.txt  keyboard_mouse_handler.cpp  keyboard_mouse_handler.h  labyrinth.cpp  labyrinth.h  main.cpp
aula_08/: calculos.py  transformada.py
tracado_de_retas/: main.py
transformadas/: CMakeLists.txt  Matrizes.cpp  Matrizes.h  Objeto.cpp  Objeto.h  main.cpp
